k8s/supplie-dev-public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supplie-demo-public
  namespace: SUPPLIE_NAMESPACE
spec:
  selector:
    app: supplie-demo
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
